--- a/public/src/components/Footer/Footer.module.css
+++ b/public/src/components/Footer/Footer.module.css
@@ -7,3 +7,10 @@
 .footer .container {
     text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+    .footer{
+        position: relative;
+        margin-top: 25px;
+    }
+}
